refactor, clean code